<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_settings"
        android:textColor="?attr/colorOnPrimary"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:textSize="@dimen/text_extra_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        app:constraint_referenced_ids="img_profile_picture,tv_name,tv_career,tv_address"
        tools:ignore="MissingConstraints">
    </androidx.constraintlayout.helper.widget.Flow>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile_picture"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_gravity="center"
        android:src="@drawable/profile_image"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/img_profile_picture"
        android:text="@string/tv_user_name"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/text_large" />

    <TextView
        android:id="@+id/tv_career"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tv_career"
        android:layout_marginTop="@dimen/margin_small"
        android:textColor="?attr/colorSecondary"
        android:textSize="@dimen/text_normal" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/tv_address"
        android:textColor="?attr/colorSecondary"
        android:textSize="@dimen/text_normal" />

</androidx.constraintlayout.widget.ConstraintLayout>